[gd_scene load_steps=9 format=3 uid="uid://dfh3f77svbaaf"]

[ext_resource type="PackedScene" uid="uid://cjsl00ixbafbk" path="res://Scenes/player.tscn" id="1_8in8o"]
[ext_resource type="Texture2D" uid="uid://de7ei6ne8fcia" path="res://Assets/Players/Violet.png" id="1_sq00x"]
[ext_resource type="FontFile" uid="uid://u3o08fjocrn6" path="res://Assets/FredokaOne-Regular.ttf" id="2_l4nqe"]
[ext_resource type="Script" path="res://Scripts/MainUI.gd" id="2_rlqpq"]
[ext_resource type="Script" path="res://Scripts/shop_window.gd" id="4_ld387"]
[ext_resource type="Texture2D" uid="uid://caiopiv8r88i5" path="res://Assets/Players/Pink.png" id="5_ff3ab"]
[ext_resource type="Texture2D" uid="uid://ck2yq7eob6enh" path="res://Assets/Players/Red.png" id="6_7ffnv"]
[ext_resource type="Texture2D" uid="uid://cnau118fyxwp1" path="res://Assets/Players/Yellow.png" id="8_qni1r"]

[node name="Main" type="Node"]

[node name="Player" parent="." instance=ExtResource("1_8in8o")]
position = Vector2(720, 405)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_rlqpq")

[node name="ShopButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -81.0
offset_right = 166.0
offset_bottom = 1.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_l4nqe")
theme_override_font_sizes/font_size = 60
text = "Shop"

[node name="ShopWindow" type="Window" parent="."]
initial_position = 1
size = Vector2i(1200, 600)
script = ExtResource("4_ld387")

[node name="CoinLabel" type="Label" parent="ShopWindow" groups=["BuyButton"]]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_right = -12.0
offset_bottom = 122.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_l4nqe")
theme_override_font_sizes/font_size = 100
text = "$0"
horizontal_alignment = 2

[node name="IncreaseCoinButton" type="Button" parent="ShopWindow"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -178.14
offset_bottom = -58.14
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_l4nqe")
theme_override_font_sizes/font_size = 89
text = "+"

[node name="GridContainer" type="GridContainer" parent="ShopWindow"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 25
columns = 2
metadata/_edit_use_anchors_ = true

[node name="Items" type="VBoxContainer" parent="ShopWindow/GridContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Icon" type="TextureRect" parent="ShopWindow/GridContainer/Items"]
layout_mode = 2
texture = ExtResource("5_ff3ab")
stretch_mode = 3

[node name="BuyButton" type="Button" parent="ShopWindow/GridContainer/Items" groups=["BuyButton"]]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_l4nqe")
theme_override_font_sizes/font_size = 60
text = "$100"

[node name="Items2" type="VBoxContainer" parent="ShopWindow/GridContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Icon" type="TextureRect" parent="ShopWindow/GridContainer/Items2"]
layout_mode = 2
texture = ExtResource("6_7ffnv")
stretch_mode = 3

[node name="BuyButton" type="Button" parent="ShopWindow/GridContainer/Items2" groups=["BuyButton"]]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_l4nqe")
theme_override_font_sizes/font_size = 60
text = "$100"

[node name="Items3" type="VBoxContainer" parent="ShopWindow/GridContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Icon" type="TextureRect" parent="ShopWindow/GridContainer/Items3"]
layout_mode = 2
texture = ExtResource("1_sq00x")
stretch_mode = 3

[node name="BuyButton" type="Button" parent="ShopWindow/GridContainer/Items3" groups=["BuyButton"]]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_l4nqe")
theme_override_font_sizes/font_size = 60
text = "$100"

[node name="Items4" type="VBoxContainer" parent="ShopWindow/GridContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Icon" type="TextureRect" parent="ShopWindow/GridContainer/Items4"]
layout_mode = 2
texture = ExtResource("8_qni1r")
stretch_mode = 3

[node name="BuyButton" type="Button" parent="ShopWindow/GridContainer/Items4" groups=["BuyButton"]]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_l4nqe")
theme_override_font_sizes/font_size = 60
text = "$100"

[connection signal="pressed" from="UI/ShopButton" to="UI" method="_on_shop_button_pressed"]
[connection signal="close_requested" from="ShopWindow" to="ShopWindow" method="_on_close_requested"]
[connection signal="pressed" from="ShopWindow/IncreaseCoinButton" to="ShopWindow" method="_on_increase_coin_button_pressed"]
